[package]
name = "zenoh-async-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "=1.11.0", features = ["unstable"] }
futures = "0.3.21"
pin-project = "1.0.10"
zenoh-async-rt-macro = { version = "0.1.0", path = "../zenoh-async-rt-macro", optional = true }

[dev-dependencies]
async-std = { version = "=1.11.0", features = ["unstable", "attributes"] }

[features]
macros = ["zenoh-async-rt-macro"]
